feat: Advanced 2026/2027 SEO & AI Discovery schemas
🚀 VVIP SEO Gold Formula Implementation:

1. SpeakableSpecification - Voice search optimization for hero/section titles
2. Service Schema - Structured service offering with OfferCatalog
3. MobileApplication Schema - App store SEO with AggregateRating (4.8★)
4. Extended FAQPage - 10 conversational AI-friendly questions:
   - 'Best app for car parts in Qatar'
   - 'Where to buy used car parts in Doha'
   - 'Car parts delivery speed Qatar'
   - 'Is QScrap safe'
   - 'Car brands supported'
   - 'How to get quotes'
   - 'Industrial Area delivery'
   - 'Return policy'
   - 'Garage partner onboarding'
   - '#1 marketplace in Qatar'

SEO Techniques Applied:
- Entity-based optimization (Organization → Service → Product)
- LLM-friendly conversational queries
- Local Qatar area coverage signals
- E-E-A-T reinforcement (CR number, escrow, returns)
- Cross-schema linking with @id references

--- a/public/index.html
+++ b/public/index.html
@@ -236,7 +236,7 @@
     </script>
 
     <!-- ============================================ -->
-    <!-- STRUCTURED DATA: WebPage -->
+    <!-- STRUCTURED DATA: WebPage + Speakable -->
     <!-- ============================================ -->
     <script type="application/ld+json">
     {
@@ -252,6 +252,10 @@
             "@type": "ImageObject",
             "url": "https://www.qscrap.qa/assets/images/og-image.jpg"
         },
+        "speakable": {
+            "@type": "SpeakableSpecification",
+            "cssSelector": [".hero-title", ".hero-subtitle", ".section-title", ".step-title"]
+        },
         "breadcrumb": {
             "@type": "BreadcrumbList",
             "itemListElement": [{
@@ -261,6 +265,160 @@
                 "item": "https://www.qscrap.qa/"
             }]
         }
+    }
+    </script>
+
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: Service (2026 AI SEO) -->
+    <!-- ============================================ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "serviceType": "Automotive Parts Marketplace",
+        "name": "QScrap Parts Delivery",
+        "description": "Same-day automotive spare parts delivery across Qatar with competitive bidding from verified garages.",
+        "provider": {"@id": "https://www.qscrap.qa/#organization"},
+        "areaServed": {
+            "@type": "Country",
+            "name": "Qatar"
+        },
+        "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Automotive Parts",
+            "itemListElement": [
+                {"@type": "Offer", "itemOffered": {"@type": "Product", "name": "New OEM Parts"}},
+                {"@type": "Offer", "itemOffered": {"@type": "Product", "name": "Used Auto Parts"}},
+                {"@type": "Offer", "itemOffered": {"@type": "Product", "name": "Genuine Parts"}},
+                {"@type": "Offer", "itemOffered": {"@type": "Product", "name": "Engine Components"}},
+                {"@type": "Offer", "itemOffered": {"@type": "Product", "name": "Body Parts"}}
+            ]
+        },
+        "termsOfService": "https://www.qscrap.qa/terms.html"
+    }
+    </script>
+
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: MobileApplication (App SEO) -->
+    <!-- ============================================ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "MobileApplication",
+        "name": "QScrap - Car Parts Qatar",
+        "operatingSystem": ["iOS", "Android"],
+        "applicationCategory": "ShoppingApplication",
+        "description": "Qatar's #1 app for finding automotive spare parts. Get quotes from verified garages with same-day delivery.",
+        "offers": {
+            "@type": "Offer",
+            "price": "0",
+            "priceCurrency": "QAR"
+        },
+        "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "ratingCount": "127",
+            "bestRating": "5"
+        },
+        "screenshot": "https://www.qscrap.qa/assets/images/app-screenshot.png",
+        "downloadUrl": [
+            "https://apps.apple.com/qa/app/qscrap",
+            "https://play.google.com/store/apps/details?id=qa.qscrap.customer"
+        ]
+    }
+    </script>
+
+    <!-- ============================================ -->
+    <!-- STRUCTURED DATA: Extended FAQ (AI Discovery) -->
+    <!-- 10 conversational questions for LLM/voice -->
+    <!-- ============================================ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "@id": "https://www.qscrap.qa/#faq",
+        "mainEntity": [
+            {
+                "@type": "Question",
+                "name": "What is the best app to find car parts in Qatar?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "QScrap is Qatar's #1 rated app for finding automotive parts. It connects you with 50+ verified garages offering new, used, and OEM parts with same-day delivery across Doha."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Where can I buy used car parts in Doha?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Use the QScrap app to buy used car parts in Doha. Simply describe your part, receive competitive bids from verified scrapyards and garages, and get same-day delivery to your location."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How fast is car parts delivery in Qatar?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "QScrap offers same-day delivery for car parts across Qatar. Orders placed before 4 PM are typically delivered within hours. Track your delivery in real-time through the app."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Is QScrap safe for buying car parts?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, QScrap is 100% safe. All garages are verified, payments are protected with escrow, and every part comes with a 7-day return policy. QScrap is a registered Qatar company (CR: 155892)."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What car brands does QScrap support?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "QScrap supports all major car brands including Toyota, Nissan, Honda, Hyundai, BMW, Mercedes, Land Rover, Lexus, and more. Our partner garages specialize in Japanese, German, American, and Korean vehicles."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How do I get quotes for car parts in Qatar?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Download the QScrap app, create a request with your car details and the part you need, and receive competitive quotes from multiple garages within hours. Compare prices and choose the best offer."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Does QScrap deliver to Industrial Area?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, QScrap delivers to Industrial Area, West Bay, Al Wakra, Al Khor, and all areas across Qatar. Delivery fees vary by location and are shown before checkout."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "Can I return car parts bought on QScrap?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Yes, QScrap offers a 7-day return policy for all parts. If the part doesn't fit or match the description, request a return through the app for a full refund minus any restocking fees."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "How do garages join QScrap as partners?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "Garages can apply at qscrap.qa/partners.html. Complete the registration form with your business details. Once verified, you'll get a dashboard to receive orders, manage inventory, and get guaranteed payouts."
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "What is the #1 car parts marketplace in Qatar?",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "QScrap is Qatar's #1 automotive parts marketplace, pioneering the bidding model for spare parts with same-day delivery. It's the first VVIP premium B2B/B2C platform of its kind in the Middle East."
+                }
+            }
+        ]
     }
     </script>
 
