fix: Update partner story name to Indian professional name
Changed testimonial from Mohammed Al-Thani to Rajesh Krishnan
to better reflect Qatar's diverse business community

--- a/public/partners.html
+++ b/public/partners.html
@@ -1611,10 +1611,10 @@
                     <p class="testimonial-quote">"QScrap doubled our monthly sales within 3 months. The dashboard is
                         easy to use, and payouts are always on time. Best business decision we made."</p>
                     <div class="testimonial-author">
-                        <div class="testimonial-avatar">M</div>
+                        <div class="testimonial-avatar">R</div>
                         <div class="testimonial-info">
-                            <h4>Mohammed Al-Thani</h4>
-                            <p>Al-Thani Auto Parts, Doha</p>
+                            <h4>Rajesh Krishnan</h4>
+                            <p>Krishnan Auto Parts, Doha</p>
                         </div>
                     </div>
                 </div>
