--- a/public/partners.html
+++ b/public/partners.html
@@ -31,8 +31,9 @@
         rel="stylesheet">
 
     <style>
-        /* ===== VVIP Platinum Ultra-Premium Design System ===== */
+        /* ===== 2026 INTELLIGENT RESPONSIVE DESIGN SYSTEM ===== */
         :root {
+            /* Brand Colors */
             --qatar-maroon: #8D1B3D;
             --qatar-maroon-dark: #6B1530;
             --qatar-maroon-light: #F5E6EB;
@@ -42,7 +43,7 @@
             --gold-light: #F5F0E1;
             --gold-glow: rgba(201, 162, 39, 0.4);
             --white: #FFFFFF;
-            --mist: #F8F8F8;
+            --mist: #F8F9FA;
             --pearl: #F0F0F0;
             --silver: #E5E5E5;
             --slate: #9A9A9A;
@@ -52,6 +53,58 @@
             --success-light: #D1FAE5;
             --glass-white: rgba(255, 255, 255, 0.95);
             --font-sans: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+
+            /* Semantic Colors */
+            --color-brand-primary: #8D1B3D;
+            --color-brand-accent: #C9A227;
+            --color-text-primary: #3A3A3A;
+            --color-text-secondary: #6A6A6A;
+            --color-text-inverse: #FFFFFF;
+            --color-bg-primary: #FFFFFF;
+            --color-bg-secondary: #F8F9FA;
+
+            /* Fluid Typography */
+            --text-xs: clamp(0.75rem, 0.7rem + 0.25vw, 0.875rem);
+            --text-sm: clamp(0.875rem, 0.8rem + 0.35vw, 1rem);
+            --text-base: clamp(1rem, 0.9rem + 0.5vw, 1.125rem);
+            --text-lg: clamp(1.125rem, 1rem + 0.6vw, 1.25rem);
+            --text-xl: clamp(1.25rem, 1.1rem + 0.75vw, 1.5rem);
+            --text-2xl: clamp(1.5rem, 1.2rem + 1.5vw, 2rem);
+            --text-3xl: clamp(1.875rem, 1.4rem + 2vw, 2.5rem);
+            --text-4xl: clamp(2.25rem, 1.6rem + 2.5vw, 3.5rem);
+            --text-hero: clamp(2.25rem, 1rem + 5vw, 4.5rem);
+
+            /* Fluid Spacing */
+            --space-xs: clamp(0.25rem, 0.2rem + 0.25vw, 0.5rem);
+            --space-sm: clamp(0.5rem, 0.4rem + 0.5vw, 0.75rem);
+            --space-md: clamp(1rem, 0.8rem + 1vw, 1.5rem);
+            --space-lg: clamp(1.5rem, 1rem + 2vw, 2.5rem);
+            --space-xl: clamp(2rem, 1.5rem + 2.5vw, 4rem);
+            --space-2xl: clamp(3rem, 2rem + 4vw, 6rem);
+            --section-padding-y: clamp(60px, 8vw, 120px);
+            --container-padding: clamp(16px, 4vw, 24px);
+
+            /* Elevation */
+            --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.05);
+            --shadow-md: 0 4px 12px rgba(0, 0, 0, 0.08);
+            --shadow-lg: 0 8px 24px rgba(0, 0, 0, 0.12);
+            --shadow-gold: 0 8px 32px rgba(201, 162, 39, 0.25);
+
+            /* Border Radius */
+            --radius-sm: 6px;
+            --radius-md: 12px;
+            --radius-lg: 20px;
+            --radius-full: 9999px;
+
+            /* Motion */
+            --duration-fast: 200ms;
+            --duration-normal: 300ms;
+            --easing-default: cubic-bezier(0.4, 0, 0.2, 1);
+
+            /* Z-Index */
+            --z-sticky: 200;
+            --z-fixed: 300;
+            --z-tooltip: 700;
         }
 
         /* Advanced Animations */
