feat: Complete Arabic translations for Gallery section
- Added data-i18n attributes to Gallery section (9 elements)
- Added gallery.item1-6 translations for EN and AR
- Gallery now shows: المعرض, عالم قطع غيار السيارات
- All 6 item overlays translated to Arabic

ZERO English words remaining in Arabic mode

--- a/public/index.html
+++ b/public/index.html
@@ -711,41 +711,47 @@
     <section class="gallery-section" id="gallery">
         <div class="container">
             <div class="section-header reveal">
-                <span class="section-badge">Gallery</span>
-                <h2 class="section-title">The World of Auto Parts</h2>
-                <p class="section-subtitle">Quality parts from verified sources</p>
+                <span class="section-badge" data-i18n="gallery.badge">Gallery</span>
+                <h2 class="section-title" data-i18n="gallery.title">The World of Auto Parts</h2>
+                <p class="section-subtitle" data-i18n="gallery.subtitle">Quality parts from verified sources</p>
             </div>
             <div class="gallery-grid">
                 <div class="gallery-item large reveal-left">
                     <img src="/assets/images/parts/wp3195881-cars-engine-parts-wallpaper.jpg"
                         alt="Car Parts Exploded View" loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text">Complete Vehicle Components</span>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item1">Complete
+                            Vehicle Components</span>
                     </div>
                 </div>
                 <div class="gallery-item reveal">
                     <img src="/assets/images/parts/wp8391672-auto-parts-wallpapers.jpg" alt="Engine Parts"
                         loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text">Engine Internals</span></div>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item2">Engine
+                            Internals</span></div>
                 </div>
                 <div class="gallery-item reveal-right">
                     <img src="/assets/images/parts/connect-part-to-people-8.jpg" alt="Parts Warehouse" loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text">Expert Selection</span></div>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item3">Expert
+                            Selection</span></div>
                 </div>
                 <div class="gallery-item wide reveal">
                     <img src="/assets/images/parts/wp8391790-auto-parts-wallpapers.jpg" alt="BMW Parts Knolling"
                         loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text">Premium BMW Components</span>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item4">Premium
+                            BMW Components</span>
                     </div>
                 </div>
                 <div class="gallery-item reveal-left">
                     <img src="/assets/images/parts/wp8391878-auto-parts-wallpapers.jpg" alt="Scrap Yard Porsche"
                         loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text">Luxury Parts Available</span>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text" data-i18n="gallery.item5">Luxury
+                            Parts Available</span>
                     </div>
                 </div>
                 <div class="gallery-item reveal-right">
                     <img src="/assets/images/parts/connect-part-to-people-10.jpg" alt="Garage Workshop" loading="lazy">
-                    <div class="gallery-item-overlay"><span class="gallery-item-text">Industrial Workshop</span></div>
+                    <div class="gallery-item-overlay"><span class="gallery-item-text"
+                            data-i18n="gallery.item6">Industrial Workshop</span></div>
                 </div>
             </div>
         </div>
